# ros_study

./: git用法
catkin_ws/src/beginner/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/src/: client.cpp  server.cpp  talker.cpp
catkin_ws/src/beginner_tutorials/srv/: AddTwoInts.srv
